crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_attr_name_unclosed_blank_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..31
  HTML_BLOCK@0..23
    HTML_BLOCK_TAG@0..23
      TEXT@0..22 "<div 1bad=x id=hidden>"
      NEWLINE@22..23 "\n"
  BLANK_LINE@23..24
    BLANK_LINE@23..24 "\n"
  PARAGRAPH@24..31
    STRONG@24..30
      STRONG_MARKER@24..26 "**"
      TEXT@26..28 "hi"
      STRONG_MARKER@28..30 "**"
    NEWLINE@30..31 "\n"
